Added MemoryCapacity field in ClusterUtilization